--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
     <script>
         const data = [
-            { amount: "20.000đ", wish: "Năm mới hanh thông, deadline tự tan, không lo lay-off." },
+            { amount: "20.000đ", wish: "Ha ha, số nhọ. Chúc mừng năm mới nhé." },
             { amount: "79.000đ", wish: "Thần Tài gõ cửa! Năm mới tiền bạc rủng rỉnh, lộc lá đầy tay." },
-            { amount: "100.000đ", wish: "Vạn sự như ý! Chúc bạn bùng nổ, đánh đâu thắng đó." },
-            { amount: "179.000đ", wish: "Đại cát đại lợi! Tài lộc hưng thịnh, sự nghiệp thăng hoa." },
-            { amount: "200.000đ", wish: "Sức khỏe là vàng! Tâm an thân lạc, vạn sự hanh thông." },
-            { amount: "279.000đ", wish: "Trùm cuối tài lộc! Tiền vào tỉ tỉ, phú quý vinh hoa rực rỡ." }
+            { amount: "100.000đ", wish: "Vạn sự như ý! Năm mới bùng nổ, đánh đâu thắng đó." },
+            { amount: "50.000đ", wish: "Cầu vừa đủ xài! Tài lộc mềm mại, sự nghiệp êm ái." },
+            { amount: "200.000đ", wish: "Thơm bơ! Sức khỏe là vàng, vạn sự hanh thông." },
+            { amount: "279.000đ", wish: "Trùm cuối tài lộc! Sao bạn lại mở được bao này. Huhu" }
         ];
         const icons = ["🐱", "🐯", "🐉", "🦁", "🐢", "🦄"];
 
