--- a/index.html
+++ b/index.html
@@ -8,21 +8,36 @@
         :root { 
             --gold: #ffd700; 
             --red-deep: #b71c1c;
-            /* Stack font thân thiện với Mobile */
             --font-main: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
 
         body {
             font-family: var(--font-main);
             background: radial-gradient(circle, #d32f2f 0%, #7b0000 100%);
-            margin: 0; overflow: hidden; height: 100vh;
-            display: flex; flex-direction: column; align-items: center; color: white;
+            margin: 0;
+            /* Thay đổi từ hidden sang auto để cho phép cuộn khi cần */
+            overflow-x: hidden;
+            overflow-y: auto; 
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: white;
             -webkit-font-smoothing: antialiased;
         }
 
-        /* Hiệu ứng trang trí */
+        /* Đảm bảo nền đỏ phủ kín toàn bộ trang khi cuộn */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle, #d32f2f 0%, #7b0000 100%);
+            z-index: -1;
+        }
+
         .decor {
-            position: absolute; top: -50px; pointer-events: none;
+            position: fixed; /* Đổi sang fixed để không bị chạy mất khi cuộn trang */
+            top: -50px; pointer-events: none;
             z-index: 1; animation: fall linear infinite;
         }
         @keyframes fall {
@@ -31,22 +46,33 @@
 
         .container { 
             position: relative; z-index: 10; width: 100%; 
-            max-width: 500px; text-align: center; padding: 20px; box-sizing: border-box; 
+            max-width: 500px; text-align: center; 
+            padding: 15px; /* Giảm padding để tiết kiệm diện tích */
+            box-sizing: border-box; 
         }
 
         h1 { 
-            font-size: 1.8rem; color: var(--gold); 
-            text-shadow: 0 2px 4px rgba(0,0,0,0.3); margin-bottom: 5px;
-            text-transform: uppercase; letter-spacing: 1px;
+            font-size: 1.5rem; color: var(--gold); 
+            text-shadow: 0 2px 4px rgba(0,0,0,0.3); margin: 10px 0;
+            text-transform: uppercase;
         }
         
         .grid {
-            display: grid; grid-template-columns: repeat(3, 1fr);
-            gap: 12px; margin-top: 25px; width: 100%;
+            display: grid; 
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px; /* Thu hẹp khoảng cách giữa các bao */
+            margin-top: 15px; width: 100%;
         }
-        @media (max-width: 400px) { .grid { grid-template-columns: repeat(2, 1fr); } }
 
-        .card { width: 100%; aspect-ratio: 2/3; perspective: 1000px; cursor: pointer; }
+        /* Responsive cho Mobile: Giảm kích thước thẻ để Fit 3 cột hoặc 2 cột tùy chiều dọc */
+        @media (max-width: 480px) {
+            .grid { grid-template-columns: repeat(2, 1fr); gap: 12px; }
+            h1 { font-size: 1.3rem; }
+        }
+
+        /* Nếu màn hình quá nhỏ, đảm bảo card thu nhỏ lại */
+        .card { width: 100%; aspect-ratio: 2/3.2; perspective: 1000px; cursor: pointer; }
+        
         .card-inner {
             position: relative; width: 100%; height: 100%;
             transition: transform 0.6s cubic-bezier(0.23, 1, 0.32, 1);
@@ -59,39 +85,22 @@
             backface-visibility: hidden; border-radius: 12px;
             border: 2px solid var(--gold); display: flex;
             flex-direction: column; justify-content: center; align-items: center;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
 
-        .card-front { background: var(--red-deep); }
-        .card-front span { font-size: 45px; margin-bottom: 8px; }
-        .card-front p { 
-            margin: 0; font-size: 0.9rem; font-weight: 700; 
-            color: var(--gold); letter-spacing: 1.5px; 
-        }
+        .card-front { background: var(--red-deep); box-shadow: 0 4px 10px rgba(0,0,0,0.3); }
+        .card-front span { font-size: 40px; margin-bottom: 5px; }
+        .card-front p { margin: 0; font-size: 0.8rem; font-weight: 700; color: var(--gold); }
 
         .card-back {
             background: #ffffff; color: #2c3e50; transform: rotateY(180deg);
-            padding: 12px; text-align: center; box-sizing: border-box;
-            display: flex; flex-direction: column; justify-content: space-between;
+            padding: 8px; text-align: center; box-sizing: border-box;
         }
 
-        .amount { 
-            color: #d32f2f; font-size: 1.1rem; font-weight: 800; 
-            padding-bottom: 8px; border-bottom: 1.5px solid #f0f0f0; 
-            width: 100%; margin-top: 10px;
-        }
-
-        .wish { 
-            font-size: 0.85rem; line-height: 1.5; font-weight: 500;
-            margin-bottom: 15px; flex-grow: 1; display: flex;
-            align-items: center; justify-content: center;
-        }
+        .amount { color: #d32f2f; font-size: 1rem; font-weight: 800; border-bottom: 1.5px solid #f0f0f0; width: 100%; margin-bottom: 5px; }
+        .wish { font-size: 0.75rem; line-height: 1.4; font-weight: 500; overflow: hidden; }
 
         .disabled { pointer-events: none; }
-        #final-msg { 
-            margin-top: 25px; font-weight: 600; color: var(--gold); 
-            min-height: 1.5em; font-size: 1rem;
-        }
+        #final-msg { margin: 20px 0; font-weight: 600; color: var(--gold); font-size: 0.95rem; }
     </style>
 </head>
 <body>
